# AI-assistant_for_table_sellers

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
data/: leads.sample.json  products.sample.json
data/knowledge/: delivery_warranty_assembly.md  desk_size_for_monitors.md  materials_and_tabletops.md  (+2 more)
docs/: architecture.md  client_pitch.md  data_model.md  demo_checklist.md  demo_script.md  development_rules.md  mvp_scope.md  project_context.md  roadmap.md  screencast_script_1_2_min.md  screenshots_plan.md  stage_5_packaging.md  ux_test_scenarios.md
scripts/: ingest_stolstoya.py  inspect_demo_db.py
tests/: test_audit_logging.py  test_bot_start_menu.py  test_catalog_repository.py  test_demo_api.py  test_dialogue_service_free_text.py  test_fallback_no_openai.py  test_faq_service.py  test_free_text_parser.py  test_guided_recommendation_flow.py  test_inspect_demo_db.py  test_intent_router.py  test_knowledge_loader.py  test_lead_flow_after_recommendation.py  test_lead_repository.py  test_lead_service.py  test_manager_handoff_summary.py  test_manager_notification.py  test_no_hallucinated_products.py  test_recommendation_context.py  test_recommendation_reasons_tradeoffs.py  test_recommendation_service_ai_flow.py  test_recommender.py  test_recommender_category_guards.py  test_recommender_scoring.py  test_response_builder_templates.py  test_sqlite_repositories.py  test_stolstoya_importer_parsing.py  test_stolstoya_normalize.py  test_stolstoya_page_routing.py
(+54 files in other folders)
